--- a/caddy/compose.yml
+++ b/caddy/compose.yml
@@ -8,7 +8,12 @@ services:
       - LOCAL_DOMAIN=${LOCAL_DOMAIN:?ERROR! Please provide the local domain name!!!}
       - TS_DOMAIN=${TS_DOMAIN:?ERROR! Please provide the tailscale domain name!!!}
     volumes:
-      - ./caddy_data/Caddyfile:/etc/caddy/Caddyfile
-      - ./caddy_data/site:/srv
-      - ./caddy_data/data:/data
-      - ./caddy_data/config:/config
+      - ./Caddyfile:/etc/caddy/Caddyfile
+      - caddy_data_site:/srv
+      - caddy_data_data:/data
+      - caddy_data_config:/config
+
+volumes:
+  caddy_data_site:
+  caddy_data_data:
+  caddy_data_config:
