--- a/dns/compose.yml
+++ b/dns/compose.yml
@@ -4,7 +4,8 @@ services:
     container_name: adguard
     restart: unless-stopped
     ports:
-      - 3333:3000/tcp
+      # admin portal port only for initial setup
+      # - 3333:3000/tcp 
       # port 80 reserved for reverse proxy
       - 8080:80/tcp 
       - 53:53/tcp
