--- a/peer_to_peer/compose.yml
+++ b/peer_to_peer/compose.yml
@@ -16,12 +16,12 @@ services:
       - VPN_SERVICE_PROVIDER=airvpn
       - VPN_TYPE=wireguard
       - WIREGUARD_MTU=1400
-      - TZ=${TZ:?ERROR! Please provide the timezone!!!}
+      - TZ=${TZ:?Please provide the timezone!!!}
       - UPDATER_PERIOD=24h
-      - WIREGUARD_PRIVATE_KEY=${WIREGUARD_PRIVATE_KEY:?ERROR! Please provide the wireguard private key!!!}
-      - WIREGUARD_PRESHARED_KEY=${WIREGUARD_PRESHARED_KEY:?ERROR! Please provide the wireguard preshared key!!!}
-      - WIREGUARD_ADDRESSES=${WIREGUARD_ADDRESSES:?ERROR! Please provide the wireguard addresses!!!}
-      - FIREWALL_VPN_INPUT_PORTS=${SLSKD_FWD_PORT:?ERROR! Please provide the slskd forwarded port!!!}
+      - WIREGUARD_PRIVATE_KEY=${WIREGUARD_PRIVATE_KEY:?Please provide the wireguard private key!!!}
+      - WIREGUARD_PRESHARED_KEY=${WIREGUARD_PRESHARED_KEY:?Please provide the wireguard preshared key!!!}
+      - WIREGUARD_ADDRESSES=${WIREGUARD_ADDRESSES:?Please provide the wireguard addresses!!!}
+      - FIREWALL_VPN_INPUT_PORTS=${SLSKD_FWD_PORT:?Please provide the slskd forwarded port!!!}
       
   slskd:
     image: docker.io/slskd/slskd:latest
@@ -36,10 +36,10 @@ services:
     environment:
       - SLSKD_REMOTE_CONFIGURATION=true
       - "SLSKD_SHARED_DIR=/music"
-      - SLSKD_SLSK_USERNAME=${SLSKD_SLSK_USERNAME:?ERROR! Please provide your soulseek username!!!}
-      - SLSKD_SLSK_PASSWORD=${SLSKD_SLSK_PASSWORD:?ERROR! Please provide your soulseek user password!!!}
-      - SLSKD_USERNAME=${SLSKD_USERNAME:?ERROR! Please provide your soulseek webui username!!!}
-      - SLSKD_PASSWORD=${SLSKD_PASSWORD:?ERROR! Please provide your soulseek webui password!!!}
+      - SLSKD_SLSK_USERNAME=${SLSKD_SLSK_USERNAME:?Please provide your soulseek username!!!}
+      - SLSKD_SLSK_PASSWORD=${SLSKD_SLSK_PASSWORD:?Please provide your soulseek user password!!!}
+      - SLSKD_USERNAME=${SLSKD_USERNAME:?Please provide your soulseek webui username!!!}
+      - SLSKD_PASSWORD=${SLSKD_PASSWORD:?Please provide your soulseek webui password!!!}
       - SLSKD_SLSK_LISTEN_PORT=${SLSKD_FWD_PORT}
     depends_on:
       gluetun_p2p:
