--- a/reverse_proxy/compose.yml
+++ b/reverse_proxy/compose.yml
@@ -5,11 +5,11 @@ services:
     restart: unless-stopped
     network_mode: "host"
     environment:
-      - LOCAL_DOMAIN=${LOCAL_DOMAIN:?ERROR! Please provide the local domain name!!!}
-      - TS_DOMAIN=${TS_DOMAIN:?ERROR! Please provide the tailscale domain name!!!}
+      - LOCAL_DOMAIN=${LOCAL_DOMAIN:?Please provide the local domain name!!!}
+      - TS_DOMAIN=${TS_DOMAIN:?Please provide the tailscale domain name!!!}
     volumes:
       - ./Caddyfile:/etc/caddy/Caddyfile
-      - ${CERTS_DIR:?ERROR! Please provide the acme.sh certs directory!!!}:/certs
+      - ${CERTS_DIR:?Please provide the acme.sh certs directory!!!}:/certs
       - caddy_data_site:/srv
       - caddy_data_data:/data
       - caddy_data_config:/config
