--- a/home/config.yml
+++ b/home/config.yml
@@ -55,3 +55,22 @@ services:
       color: '#eb215d'
     status:
       enabled: true
+  - title: Qbittorrent
+    description: Torrenting
+    link: https://qbittorrent.dis.cat/
+    icon:
+      name: simple-icons:qbittorrent
+      wrap: true
+      color: '#eb215d'
+    status:
+      enabled: true
+      
+  - title: Jackett
+    description: Torrent search
+    link: https://jackett.dis.cat/
+    icon:
+      name: game-icons:lab-coat
+      wrap: true
+      color: '#eb215d'
+    status:
+      enabled: true
