--- a/home/compose.yml
+++ b/home/compose.yml
@@ -5,4 +5,4 @@ services:
     ports:
       - 3000:3000
     volumes:
-      - ./config.yml:/app/data/config.yml
+      - ./.config.yml:/app/data/config.yml
