--- a/media/compose.yml
+++ b/media/compose.yml
@@ -56,6 +56,7 @@ services:
     container_name: calibre
     restart: unless-stopped
     ports:
+      - 8018:8080
       - 8028:8081
     volumes:
       - calibre_config:/config
@@ -80,6 +81,19 @@ services:
       - /media/bulk/audiobooks/podcasts:/podcasts:rw
       - /media/bulk/audiobooks/metadata:/metadata:rw
 
+  commafeed:
+    image: docker.io/athou/commafeed:latest-h2
+    container_name: commafeed
+    restart: unless-stopped
+    ports:
+      - 8077:8082
+    volumes:
+      - commafeed_data:/commafeed/data
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+
 volumes:
   navidrome_data:
   ytptube_config:
@@ -87,3 +101,4 @@ volumes:
   jellyfin_cache:
   calibre_config:
   audiobookshelf_config:
+  commafeed_data:
