--- a/home/compose.yml
+++ b/home/compose.yml
@@ -1,6 +1,7 @@
 services:
   mafl:
     image: docker.io/hywax/mafl
+    container_name: mafl
     restart: unless-stopped
     ports:
       - 3000:3000
