--- a/peer_to_peer/compose.yml
+++ b/peer_to_peer/compose.yml
@@ -23,6 +23,7 @@ services:
       - WIREGUARD_MTU=1400
       - TZ=${TZ:?Please provide the timezone!}
       - UPDATER_PERIOD=24h
+      - HEALTH_VPN_DURATION_INITIAL=120s
       - WIREGUARD_PRIVATE_KEY=${WIREGUARD_PRIVATE_KEY:?Please provide the wireguard private key!}
       - WIREGUARD_PRESHARED_KEY=${WIREGUARD_PRESHARED_KEY:?Please provide the wireguard preshared key!}
       - WIREGUARD_ADDRESSES=${WIREGUARD_ADDRESSES:?Please provide the wireguard addresses!}
@@ -52,7 +53,7 @@ services:
         condition: service_healthy
 
   qbittorrent:
-    image: docker.io/linuxserver/qbittorrent:latest
+    image: docker.io/linuxserver/qbittorrent:libtorrentv1 # fix for qbittorrent stalling after gluetun reconnects internally
     container_name: qbittorrent
     restart: unless-stopped
     network_mode: "service:gluetun_p2p"
